<resources>
    <string name="app_name">ChoreRallye</string>

    <string name="layout_item_text_member">Person</string>
    <string name="layout_item_text_chore">Chore</string>
    <string name="layout_item_text_race_history_item">Race history Item</string>
    <string name="layout_item_text_rallye_info">Rallye info</string>

    <string name="dialog_text_choose_image">Choose image</string>
    <string name="dialog_text_capture_camera_image">Capture camera image</string>
    <string name="dialog_text_choose_gallery_image">Choose image from gallery</string>
    <string name="dialog_text_no_members">You have not added any persons yet.\nYou need them to use the app.</string>
    <string name="dialog_text_no_chores">You have not added any chores yet.\nYou need them to use the app.</string>
    <string name="dialog_text_no_household_name">You have not set a household name yet.\nPlease provide one in the settings or scan a QR code.</string>
    <string name="dialog_text_note_for_race_history_item" formatted="false">Note for \"%s\":</string>
    <string name="dialog_text_race_has_ended">The rallye has ended!</string>
    <string name="dialog_text_race_has_ended_with_winner" formatted="false">The rallye has ended!\nThe winner is \"%s\"!</string>
    <string name="dialog_text_loading_data">Loading data</string>
    <string name="dialog_text_saving_data">Saving data</string>
    <string name="dialog_text_please_wait">Please wait...</string>

    <string name="dialog_button_text_ok">OK</string>
    <string name="dialog_button_text_cancel">Cancel</string>

    <string name="activity_label_members">Persons</string>
    <string name="activity_label_chores">Chores</string>
    <string name="activity_label_qr_code">QR code</string>
    <string name="activity_label_history">History</string>
    <string name="activity_label_statistics">Statistics</string>

    <string name="main_menu_undo">Undo</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_statistics">Statistics</string>
    <string name="main_menu_start_race">Start Rallye</string>
    <string name="main_menu_stop_race">Stop Rallye</string>
    <string name="main_menu_manage_members">Persons</string>
    <string name="main_menu_manage_chores">Chores</string>
    <string name="main_menu_show_household_qr_code">Show QR code</string>
    <string name="main_menu_scan_household_qr_code">Scan QR code</string>
    <string name="main_menu_display_mode_log">Switch to log mode</string>
    <string name="main_menu_display_mode_rallye">Switch to Rallye mode</string>
    <string name="main_menu_manage_preferences">Preferences</string>
    <string name="main_menu_create_backup">Create backup</string>
    <string name="main_menu_restore_backup">Restore backup</string>
    <string name="main_menu_submenu_more">More...</string>

    <string name="list_menu_action_add">Add</string>

    <string name="detail_menu_action_save">Save</string>

    <string name="history_menu_delete_full_history">Delete history</string>

    <string name="race_item_text_member_points_for_chore" formatted="false">%s gets %d points for doing %s.</string>
    <string name="race_item_text_member_chore" formatted="false">%s did %s.</string>

    <string name="race_info_text_not_running">No Rallye running.</string>
    <string name="race_info_text_running" formatted="false">Period: %s, days left: %d</string>

    <string name="list_context_menu_edit">Edit</string>
    <string name="list_context_menu_remove">Remove</string>

    <string name="confirmation_text_remove_member" formatted="false">Do you really want to remove person \"%s\"?</string>
    <string name="confirmation_text_remove_chore" formatted="false">Do you really want to remove chore \"%s\"?</string>
    <string name="confirmation_text_remove_race_history_item">Do you really want to remove this entry?</string>
    <string name="confirmation_text_delete_full_race_history">Do you really want to delete the full history?</string>
    <string name="confirmation_text_update_chore_value" formatted="false">Do you really want to change the value for chore \"%s\"?</string>
    <string name="confirmation_text_change_household_name">Do you really want to change the household name?\nYou cannot use the existing data anymore!</string>
    <string name="confirmation_text_participate_in_household" formatted="false">Do you really want to participate in Household \"%s\"?\nAny previous existing data cannot be used anymore!</string>
    <string name="confirmation_text_end_rallye">Do you really want to stop the Rallye?</string>

    <string name="edittext_hint_name">Name</string>
    <string name="edittext_hint_value">Value</string>
    <string name="edittext_hint_note">Note</string>
    <string name="checkbox_text_instantly_add_note">Instantly add note</string>

    <string name="pref_title_household_name">Household name</string>
    <string name="pref_summary_household_name">The symbolic name of your household</string>
    <string name="pref_title_winning_percentage">Winning percentage</string>
    <string name="pref_title_rallye_length">Length of Rallye in days</string>
    <string name="pref_title_instantly_add_race_item_note">Instantly add note</string>
    <string name="pref_summary_instantly_add_race_item_note">If a chore is assigned to a person, immediately add a note</string>

    <string name="text_scan_qr_code_to_participate">Scan this QR code with another app to participate in the same household.</string>

    <string name="statistics_label_chores_pie_chart">Distribution of chores</string>
</resources>
