<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:title="@string/main_menu_undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_manage_members"
        android:title="@string/main_menu_manage_members"/>
    <item
        android:id="@+id/action_manage_chores"
        android:title="@string/main_menu_manage_chores"/>
    <item
        android:id="@+id/action_show_household_qr_code"
        android:title="@string/main_menu_show_household_qr_code"/>
    <item
        android:id="@+id/action_scan_household_qr_code"
        android:title="@string/main_menu_scan_household_qr_code"/>
    <item
        android:id="@+id/action_manage_preferences"
        android:title="@string/main_menu_manage_preferences"/>
</menu>
